src/test/ui/generator/too-many-parameters.rs
#![feature(generators)]

fn main() {
    |(), ()| {
        //~^ error: too many parameters for a generator
        yield;
    };
}
